--- a/nvme-rhel-95.adoc
+++ b/nvme-rhel-95.adoc
@@ -27,7 +27,7 @@ You can use the following procedure to validate the minimum supported RHEL 9.5 s
 
 .Steps
 
-. Install RHEL 9.5 on the server. After the installation is complete, verify that you are running the specified RHEL 9.5 kernel: 
+. Install RHEL 9.5 on the server. After the installation is complete, verify that you are running the required RHEL 9.5 kernel: 
 +
 [source,cli]
 ----
@@ -294,7 +294,7 @@ The expected ouptut is 1.
 
 == Step 4: Optionally, enable 1MB I/O 
 
-You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcome NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
+You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcom NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
 
 == Step 5: Configure NVMe/TCP
 
