--- a/nvme-rhel-10.adoc
+++ b/nvme-rhel-10.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 10.0 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-This document describes how to configure NVMe-oF hosts for Red Hat Enterprise Linux (RHEL) 10.0. For additional support and feature information, refer to link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 10.0:
+This document describes how to configure NVMe-oF hosts for RHEL 10.0. For additional support and feature information, refer to link:hu-nvme-index.html[NVME-oF Overview^]. The following are known limitations for RHEL 10.0:
 
 * DM multipath support for NVMe-oF is not supported.
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
@@ -24,13 +24,13 @@ This document describes how to configure NVMe-oF hosts for Red Hat Enterprise Li
 
 You can configure your host to use SAN booting to simplify deployment and improve scalability, see link:nvme-enable-SAN-booting.html[Enable SAN booting^].
 
-== Step 2: Validate software versions
+== Step 2: Verify software versions and NVMe configuration
 
-Use the following procedure to validate the minimum supported RHEL 10.0 software versions.
+Use the following procedure to validate that your RHEL 10.0 system meets the software requirements and verify the NVMe package installations and host configuration.
 
 .Steps
 
-. Install RHEL 10.0 on the server. After the installation is complete, verify that you are running the specified RHEL 10.0 kernel: 
+. Install RHEL 10.0 on the server. After the installation is complete, verify that you are running the required RHEL 10.0 kernel: 
 +
 [source,cli]
 ----
@@ -107,18 +107,16 @@ vs_ nvme_194_rhel10
 ====
 
 [NOTE]
-If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
+If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP storage system subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
 
-== Step 3: Configure NVMe/FC
+== Step 3: Configure NVMe/FC and NVMe/TCP
 
-You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. For NVMe/FC configured with a Broadcom adapter, you can enable I/O requests of size 1MB.
+Configure NVMe/FC with Broadcom/Emulex or Marvell/QLogic adapters, or configure NVMe/TCP using manual discovery and connect operations. Note that NVMe/TCP doesn't support auto-connect operations and requires manual connect or connect-all commands.
 
 [role="tabbed-block"]
 =====
-.Broadcom/Emulex
+.FC - Broadcom/Emulex
 --
-
-Configure NVMe/FC for a Broadcom/Emulex adapter.
 
 .Steps
 
@@ -145,7 +143,7 @@ LPe36002-M64
 cat /sys/class/scsi_host/host*/modeldesc
 ----
 +
-You should see an output similar to the following example:
+You should see output similar to the following example:
 +
 ----
 Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter 
@@ -161,7 +159,7 @@ Emulex LightPulse LPe36002-M64 2-Port 64Gb Fibre Channel Adapter
 cat /sys/class/scsi_host/host*/fwrev 
 ----
 +
-The following example shows firmware versions:
+The command returns firmware versions:
 +
 ----
 14.0.539.16, sli-4:6:d
@@ -184,7 +182,7 @@ The following example shows a driver version:
 +
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
+. Verify that `lpfc_enable_fc4_type` is set to `3`:
 +
 [source,cli]
 ----
@@ -259,21 +257,19 @@ FCP CMPL: xb 000014a5 Err 0002149a
 ====
 
 --
-.Marvell/QLogic
+.FC - Marvell/QLogic
 --
-
-Configure NVMe/FC for a Marvell/QLogic adapter.
 
 .Steps
 
-. Verify that you are running the supported adapter driver and firmware versions:
+. Verify that you are using the supported adapter driver and firmware versions:
 +
 [source,cli]
 ----
 cat /sys/class/fc_host/host*/symbolic_name
 ----
 +
-The follow example shows driver and firmware versions:
+The following example shows driver and firmware versions:
 +
 ----
 QLE2872 FW:v9.15.00 DVR:v10.02.09.300-k
@@ -287,29 +283,15 @@ QLE2872 FW:v9.15.00 DVR:v10.02.09.300-k
 cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 ----
 +
-The expected ouptut is 1.
+The expected output is 1.
 --
-=====
 
-== Step 4: Optionally, enable 1MB I/O 
-
-You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcome NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
-
-== Step 5: Verify NVMe boot services 
-
-With RHEL 10.0, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
-
-After booting completes, verify that the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services are enabled.
-
-include::_include/nvme/verify-nvme-services.adoc[]
-
-== Step 6: Configure NVMe/TCP
-
-include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
+.TCP
+--
 
 .Steps
 
-. Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
+. Verify that the initiator port can retrieve the discovery log page data across the supported NVMe/TCP LIFs:
 +
 [source,cli]
 ----
@@ -318,7 +300,7 @@ nvme discover -t tcp -w host-traddr -a traddr
 +
 .Show example
 [%collapsible]
-=====
+====
 [subs=+quotes]
 ----
 nvme discover -t tcp -w 192.168.20.1 -a 192.168.20.20
@@ -413,9 +395,9 @@ traddr:  192.168.20.20
 eflags:  none
 sectype: none
 ----
-=====
+====
 
-. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
+. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully retrieve discovery log page data: 
 +
 [source,cli]
 ----
@@ -443,7 +425,7 @@ nvme connect-all -t tcp -w host-traddr -a traddr
 +
 .Show example
 [%collapsible]
-=====
+====
 [subs=+quotes]
 ----
 nvme	connect-all	-t	tcp	-w	192.168.20.1	-a	192.168.20.20
@@ -451,7 +433,7 @@ nvme	connect-all	-t	tcp	-w	192.168.21.1	-a	192.168.21.20
 nvme	connect-all	-t	tcp	-w	192.168.20.1	-a	192.168.20.21
 nvme	connect-all	-t	tcp	-w	192.168.21.1	-a	192.168.21.21	
 ----			
-=====
+====
 
 [NOTE]
 ====
@@ -459,8 +441,21 @@ Beginning with RHEL 9.4, the setting for the NVMe/TCP `ctrl_loss_tmo timeout` is
 
 include::_include/nvme/ctrl-loss-tmo-default-off.adoc[]
 ====
+=====
 
-== Step 7: Validate NVMe-oF
+== Step 4: Optionally, enable 1MB I/O for NVMe/FC
+
+You can enable I/O requests of size 1MB for NVMe/FC configured with a Broadcom adapter, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
+
+== Step 5: Verify NVMe boot services 
+
+With RHEL 10.0, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
+
+After booting completes, verify that the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services are enabled.
+
+include::_include/nvme/verify-nvme-services.adoc[]
+
+== Step 6: Verify the multipathing configuration
 
 include::_include/nvme/nvme-validate-nvme-of.adoc[]
 
@@ -572,7 +567,7 @@ nvme netapp ontapdevices -o json
 --
 =====
 
-== Step 8: Set up secure in-band authentication
+== Step 7: Set up secure in-band authentication
 
 Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a RHEL 10.0 host and an ONTAP controller.
 
@@ -595,7 +590,7 @@ cat /etc/nvme/hostnqn
 ----
 . Generate the dhchap key for the RHEL 10.0 host.
 +
-The following output describes the `gen-dhchap-key` command paramters:
+The following output describes the `gen-dhchap-key` command parameters:
 +
 ----
 nvme gen-dhchap-key -s optional_secret -l key_length {32|48|64} -m HMAC_function {0|1|2|3} -n host_nqn 
@@ -677,9 +672,9 @@ DHHC- 1:03:7zf8I9gaRcDWH3tCH5vLGaoyjzPIvwNWusBfKdpJa+hia
 --
 .JSON file
 --
-When multiple NVMe subsystems are available on the ONTAP controller configuration, you can use the `/etc/nvme/config.json` file with the `nvme connect-all` command. 
+When multiple NVMe subsystems are available on the ONTAP controller, you can use the `/etc/nvme/config.json` file with the `nvme connect-all` command. 
 
-Use the `-o` option to generate the JSON file. See the NVMe connect-all manual pages for more syntax options.
+Use the `-o` option to generate the JSON file. Refer to the NVMe connect-all man pages for more syntax options.
 
 .Steps
 . Configure the JSON file.
@@ -781,7 +776,7 @@ aKDKJQ2o53pX3wYM9xdv5DtKNNhJInZ7X8wU2RQpQIngc=:
 cat /sys/class/nvme-subsystem/nvme-subsys0/nvme0/dhchap_ctrl_secret
 ----
 +
-You should see an output similar to the following example:
+You should see output similar to the following example:
 +
 ----
 DHHC-1:03:fMCrJharXUOqRoIsOEaG6m2PH1yYvu5+z3jT
@@ -790,7 +785,7 @@ mzEKUbcWu26I33b93bil2WR09XDho/ld3L45J+0FeCsStBEAfhYgkQU=:
 --
 =====
 
-== Step 9: Review the known issues
+== Step 8: Review the known issues
 
 There are no known issues.
 
