--- a/nvme-rhel-810.adoc
+++ b/nvme-rhel-810.adoc
@@ -31,7 +31,7 @@ You can use the following procedure to validate the minimum supported RHEL 8.10 
 
 .Steps
 
-. Install RHEL 8.10 on the server. After the installation is complete, verify that you are running the specified RHEL 8.10 kernel: 
+. Install RHEL 8.10 on the server. After the installation is complete, verify that you are running the required RHEL 8.10 kernel: 
 +
 [source,cli]
 ----
@@ -319,7 +319,7 @@ The expected ouptut is 1.
 
 == Step 4: Optionally, enable 1MB I/O 
 
-You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcome NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
+You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcom NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
 
 == Step 5: Configure NVMe/TCP
 
