--- a/nvme-rhel-82.adoc
+++ b/nvme-rhel-82.adoc
@@ -26,11 +26,11 @@ You can configure your host to use SAN booting to simplify deployment and improv
 
 == Step 2: Validate software versions
 
-You can use the following procedure to validate the minimum supported RHEL 8.3 software versions.
+You can use the following procedure to validate the minimum supported RHEL 8.2 software versions.
 
 .Steps
 
-. Install RHEL 8.3 on the server. After the installation is complete, verify that you are running the specified RHEL 8.3 kernel: 
+. Install RHEL 8.2 on the server. After the installation is complete, verify that you are running the required RHEL 8.2 kernel: 
 +
 [source,cli]
 ----
@@ -228,7 +228,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 
 == Step 4: Optionally, enable 1MB I/O 
 
-You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcome NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
+You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcom NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
 
 == Step 5: Validate NVMe-oF
 
