--- a/nvme-rhel-91.adoc
+++ b/nvme-rhel-91.adoc
@@ -29,7 +29,7 @@ You can use the following procedure to validate the minimum supported RHEL 9.1 s
 
 .Steps
 
-. Install RHEL 9.1 on the server. After the installation is complete, verify that you are running the specified RHEL 9.1 kernel: 
+. Install RHEL 9.1 on the server. After the installation is complete, verify that you are running the required RHEL 9.1 kernel: 
 +
 [source,cli]
 ----
@@ -300,7 +300,7 @@ The expected output is:
 
 == Step 4: Optionally, enable 1MB I/O 
 
-You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcome NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
+You can increase the `lpfc` value to issue 1MB I/O requests on the Broadcom NVMe/FC host, see  link:nvme-enable-broadcom-1mb-size.html[Enable 1MB I/O^].
 
 == Step 5: Configure NVMe/TCP
 
