ontapdoc-3096 continued to implement Amanda's feedback

--- a/nvme-enable-broadcom-1mb-size.adoc
+++ b/nvme-enable-broadcom-1mb-size.adoc
@@ -4,7 +4,7 @@ permalink: nvme-enable-broadcom-1mb-size.html
 keywords: nvme, san, host, rhel, rocky linux
 summary: You can issue I/O requests of size 1MB for a Broadcom NVMe/FC host.
 ---
-= Enable 1MB I/O 
+= Enable 1MB I/O for NVMe/FC
 :hardbreaks:
 :toclevels: 1
 :nofooter:
